# ikidgov-Iki-Data-Goverance

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  crud.db  docker-compose.yml  pyproject.toml  requirements.txt
config/: governance.yaml
examples/: GUIDE.md  enterprise_setup.py  example_config.yml  mssql_setup.sql  mysql_setup.sql  postgresql_setup.sql  sqlite_setup.sql
init/: mssql-init.sql  mysql-init.sql  postgres-init.sql  sqlite-init.py
src/ikidgov/: __init__.py  config_loader.py  facade.py
src/ikidgov.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ikidgov/cli/: base_command.py  main.py
src/ikidgov/cli/commands/: classify.py  policy_check.py  policy_compile.py  registry.py  run_example.py  scan.py  show_config.py
src/ikidgov/connectors/: csv_connector.py  json_connector.py  sql_connector.py
src/ikidgov/core/: audit.py  connector_base.py  crud_base.py  decision.py  detector_base.py  example_runtime.py  module_base.py  validation.py
src/ikidgov/detectors/: builtin_detector.py  iki_pii_masker_detector.py
src/ikidgov/modules/access_control/: __init__.py  impl.py  interface.py  roles.py
src/ikidgov/modules/classification_engine/: impl.py  interface.py
src/ikidgov/policies/: restrict_pii.yaml
src/ikigov/: __init__.py
tests/: conftest.py  test_access_control_crud.py  test_audit_logging.py  test_cli_smoke.py  test_enterprise_hardening.py  test_enterprise_setup.py  test_external_config.py  test_module_isolation.py  test_portability.py  test_sqlite_cli_flow.py
(+6 files in other folders)
